--- a/themes/custom/assets/css/common/main.css
+++ b/themes/custom/assets/css/common/main.css
@@ -1,9 +1,12 @@
+@import 'fonts';
+
 .main {
     position: relative;
     min-height: calc(100vh - var(--header-height) - var(--footer-height));
     max-width: calc(var(--main-width) + var(--gap) * 2);
     margin: auto;
     padding: var(--gap);
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",  Helvetica, Arial, sans-serif;
 }
 
 .page-header h1 {
