--- a/themes/custom/assets/css/common/profile-mode.css
+++ b/themes/custom/assets/css/common/profile-mode.css
@@ -8,6 +8,7 @@
     align-items: center;
     min-height: calc(100vh - var(--header-height) - var(--footer-height) - (var(--gap) * 2));
     text-align: center;
+    font-size: 16px;
 }
 
 .profile .profile_inner h1 {
