--- a/themes/custom/assets/css/common/post-single.css
+++ b/themes/custom/assets/css/common/post-single.css
@@ -73,11 +73,11 @@
     font-size: 16px;
     line-height: 1.54;
     font-weight: 500;
+    text-rendering: optimizeLegibility;
 }
 
 .post-content ul li {
     font-size: 16px;
-    line-height: 1.5;
 }
 
 .post-content a,
