--- a/themes/hugo-theme-hello-friend-ng/layouts/_default/single.html
+++ b/themes/hugo-theme-hello-friend-ng/layouts/_default/single.html
@@ -33,6 +33,10 @@
                 <hr />
             {{ end }}
 
+  {{- if (.Param "ShowToc") }}
+  {{- partial "toc.html" . }}
+  {{- end }}
+
             <div class="post-content">
                 {{ .Content }}
             </div>
