Changed theme toggler to be like coder theme

--- a/themes/custom_2/assets/scss/_header.scss
+++ b/themes/custom_2/assets/scss/_header.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   position: relative;
   padding: 20px;
+  padding-right: 0px;
   // Default
   background: $light-background-header;
 
