--- a/themes/custom_2/layouts/_default/baseof.html
+++ b/themes/custom_2/layouts/_default/baseof.html
@@ -18,6 +18,7 @@
             {{ block "footer" . }}
                 {{ partial "footer.html" . }}
             {{ end }}
+            {{ partial "float" . }}
         </div>
 
         {{ partial "javascript.html" . }}
