--- a/themes/custom_2/assets/scss/_variables.scss
+++ b/themes/custom_2/assets/scss/_variables.scss
@@ -23,6 +23,11 @@ $dark-table-color: #4e4e57;
 $media-size-phone: "(max-width: 684px)";
 $media-size-tablet: "(max-width: 900px)";
 
+/*$light-accent-color: #add8e6;*/
+/*$light-accent-color: #00c8ff;*/
+$light-accent-color: #55caff;
+$dark-accent-color: #fe5186;
+
 /* Variables for js, must be the same as these in @custom-media queries */
 :root {
   --phoneWidth: (max-width: 684px);
