--- a/themes/custom_2/assets/scss/_logo.scss
+++ b/themes/custom_2/assets/scss/_logo.scss
@@ -24,7 +24,12 @@
     display: inline-block;
     width: 10px;
     height: 1rem;
-    background: #fe5186;
+    background: $light-accent-color;
+
+    [data-theme=dark] & {
+      background: $dark-accent-color;
+    }
+
     margin-left: 5px;
     border-radius: 1px;
     animation: cursor 1s infinite;
