--- a/themes/custom_2/assets/scss/_menu.scss
+++ b/themes/custom_2/assets/scss/_menu.scss
@@ -73,7 +73,15 @@
     text-decoration: none;
 
     &:hover {
-      text-decoration: underline;
+      /*text-decoration: underline;*/
+      color: $light-accent-color
+
+    }
+
+    [data-theme=dark] & {
+      &:hover {
+        color: $dark-accent-color
+      }
     }
 
     &:last-of-type {
