--- a/themes/custom_2/layouts/_default/single.html
+++ b/themes/custom_2/layouts/_default/single.html
@@ -13,6 +13,9 @@
 
         <article>
             <h2 class="post-title"><a href="{{ .Permalink }}">{{ .Title | markdownify }}</a></h2>
+            <div class="post-meta">
+                {{- partial "post_meta.html" . -}}
+            </div>
 
             {{ if .Params.Cover }}
                 <figure class="post-cover">
