Rounded youtube coreners, other

--- a/themes/custom_2/assets/scss/_video.scss
+++ b/themes/custom_2/assets/scss/_video.scss
@@ -60,3 +60,12 @@
         width: 100%;
     }
 }
+
+.youtube {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    aspect-ratio: 16/9;
+    border: none;
+}
