--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -80,10 +80,13 @@ h2 {
 
 h3 {
   font-size: 1.375rem;
+  font-weight: 600;
+  // font-style: italic;
 }
 
 h4 {
   font-size: 1.125rem;
+  margin: 0;
 }
 
 @media #{$media-size-phone} {
