--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -75,12 +75,15 @@ h1 {
 
 h2 {
   font-size: 1.625rem;
-  margin-top: 1em;
+  margin-top: 1.0em;
+  margin-bottom: 1.0em;
 }
 
 h3 {
   font-size: 1.375rem;
   font-weight: 600;
+  margin-top: 0.8em;
+  margin-bottom: 0.8em;
   // font-style: italic;
 }
 
