--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -132,7 +132,7 @@ img {
   }
   &.circle {
     border-radius: 50%;
-    max-width: 25%;
+    max-width: 250px;
     margin: auto;
     caret-color: transparent;
   }
