--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -130,7 +130,8 @@ img {
   &.right {
     margin-left: auto;
   }
-  &.circle {
+
+  &.home {
     border-radius: 50%;
     max-width: 250px;
     margin: auto;
