--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -140,9 +140,10 @@ img {
 
   &.banner {
     width: 100%;
-    height: 600px;
+    height: 500px;
     object-fit: cover;
     border-radius: 10px;
+    caret-color: transparent;
     // box-shadow: 3px 6px 5px 5px #00000044;
   }
 }
