--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -146,6 +146,15 @@ img {
     caret-color: transparent;
     // box-shadow: 3px 6px 5px 5px #00000044;
   }
+
+  &.wide {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+    caret-color: transparent;
+    // box-shadow: 3px 6px 5px 5px #00000044;
+  }
 }
 
 figure {
@@ -377,6 +386,8 @@ hr {
   height: 1px;
   // Default
   background: $light-border-color;
+  margin-top: 30px;
+  margin-bottom: 30px;
 
   @media (prefers-color-scheme: dark) {
     background: $dark-border-color;
