--- a/themes/custom_2/assets/scss/_tables.scss
+++ b/themes/custom_2/assets/scss/_tables.scss
@@ -3,8 +3,9 @@
     border-collapse: collapse;
     margin: 25px auto;
     font-size: 0.9em;
-    min-width: 400px;
-    max-width: 100%;
+    width: 100%;
+    // min-width: 400px;
+    // max-width: 100%;
 
     th,
     td {
