--- a/themes/custom_2/assets/scss/_terms.scss
+++ b/themes/custom_2/assets/scss/_terms.scss
@@ -1,5 +1,10 @@
+.term-tags ul {
+    margin-left: 0;
+}
+
 .terms-tags li {
     display: inline-block;
+    // display: inline;
     margin: 10px;
     font-weight: 500;
 }
