--- a/themes/custom_2/layouts/index.html
+++ b/themes/custom_2/layouts/index.html
@@ -18,6 +18,20 @@
                     {{ partial "social-icons.html" . }}
                 </div>
             {{- end }}
+
+            <div class="term-tags">
+                <ul class="terms-tags">
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                    <li>
+                        <a href="/tags">Tags</a>
+                    </li>
+                    <li>
+                        <a href="archives">Archives</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </main>
 {{ end }}
