--- a/themes/custom_2/layouts/index.html
+++ b/themes/custom_2/layouts/index.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "main" }}
-    <main aria-role="main">
+    <main aria-role="main" style="caret-color: transparent">
         <div>
             <!--
             {{ if .Site.Params.Portrait.Path }}
