--- a/themes/custom_2/assets/scss/_footer.scss
+++ b/themes/custom_2/assets/scss/_footer.scss
@@ -2,6 +2,7 @@
   padding: 40px 20px;
   flex-grow: 0;
   color: $light-color-secondary;
+  caret-color: transparent;
 
   &__inner {
     display: flex;
