--- a/themes/custom_2/layouts/index.html
+++ b/themes/custom_2/layouts/index.html
@@ -7,7 +7,7 @@
         <div>
             <!--
             {{ if .Site.Params.Portrait.Path }}
-               <img src="{{ .Site.Params.Portrait.Path }}" class="home" alt="{{ .Site.Params.Portrait.Alt }}" style="max-width:{{ .Site.Params.Portrait.MaxWidth }}" />
+               <img src="{{ .Site.Params.Portrait.Path }}" class="home" alt="{{ .Site.Params.Portrait.Alt }}" style="max-width:{{ .Site.Params.Portrait.MaxWidth }}; padding-bottom: 10px" />
             {{ end }}
             -->
 
