--- a/themes/custom_2/assets/scss/_menu.scss
+++ b/themes/custom_2/assets/scss/_menu.scss
@@ -75,7 +75,6 @@
     &:hover {
       /*text-decoration: underline;*/
       color: $light-accent-color
-
     }
 
     [data-theme=dark] & {
@@ -87,6 +86,11 @@
     &:last-of-type {
       margin-right: 0;
     }
+  }
+
+  .selected a {
+    text-decoration: underline;
+    // font-weight: 600;
   }
 }
 
