--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -18,7 +18,7 @@ body {
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Roboto",
     "Segoe UI", Helvetica, Arial, sans-serif;
   font-display: auto;
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.54;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -35,7 +35,7 @@ body {
   color: $light-color;
 
   @media #{$media-size-phone} {
-    font-size: 1rem;
+    // font-size: 1rem;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -70,17 +70,17 @@ h6 {
 }
 
 h1 {
-  font-size: 2.625rem;
+  font-size: 2.5rem;
 }
 
 h2 {
-  font-size: 1.625rem;
+  font-size: 1.8rem;
   margin-top: 1.0em;
   margin-bottom: 1.0em;
 }
 
 h3 {
-  font-size: 1.375rem;
+  font-size: 1.5rem;
   font-weight: 600;
   margin-top: 0.8em;
   margin-bottom: 0.8em;
@@ -88,7 +88,7 @@ h3 {
 }
 
 h4 {
-  font-size: 1.125rem;
+  font-size: 1.2rem;
   margin: 0;
 }
 
