--- a/themes/custom_2/assets/scss/_main.scss
+++ b/themes/custom_2/assets/scss/_main.scss
@@ -59,6 +59,20 @@ body {
   }
 }
 
+canvas {
+    display: float;
+    left: 0;
+    top: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    [data-theme=light] & {
+      display: none
+    }
+}
+
 h2,
 h3,
 h4,
