--- a/themes/custom_2/assets/scss/_menu.scss
+++ b/themes/custom_2/assets/scss/_menu.scss
@@ -1,7 +1,7 @@
 .menu {
   z-index: 9999;
   // Default
-  background: $light-background-header;
+  /*background: $light-background-header;
 
   @media (prefers-color-scheme: dark) {
     background: $dark-background-header;
@@ -17,7 +17,7 @@
 
   [data-theme=light] & {
     background: $light-background-header;
-  }
+  }*/
 
   @media #{$media-size-phone} {
     position: absolute;
