--- a/themes/custom_2/assets/scss/main.scss
+++ b/themes/custom_2/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import "mixins";
 @import "fonts";
 @import "buttons";
+
 /* Modules */
 @import "header";
 @import "logo";
@@ -27,3 +28,5 @@
 @import "archives";
 @import "terms";
 @import "project";
+@import "job";
+@import "album";
