updates to icons

--- a/themes/custom_2/assets/scss/_single.scss
+++ b/themes/custom_2/assets/scss/_single.scss
@@ -8,6 +8,18 @@
     max-width: 600px;
   }
 
+  i {
+    padding-right: 10px;
+
+    [data-theme=dark] & {
+      color: $dark-color-secondary;
+    }
+
+    [data-theme=light] & {
+      color: $light-color-secondary;
+    }
+  }
+
   &-date {
     &:after {
       content: '—';
