--- a/themes/custom_2/assets/scss/_buttons.scss
+++ b/themes/custom_2/assets/scss/_buttons.scss
@@ -149,6 +149,19 @@ a.markdown-btn {
   font-size: 14px;
   font-weight: 600;
 
+  .i {
+    padding: 0;
+
+    [data-theme=dark] & {
+      color: $dark-color;
+    }
+
+    [data-theme=light] & {
+      color: $light-color;
+    }
+
+  }
+
   [data-theme=dark] & {
     background: $dark-background-header;
     color: $dark-color;
