--- a/themes/custom_2/layouts/partials/header.html
+++ b/themes/custom_2/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <span class="header__inner">
         {{ partial "logo.html" . }}
 
