--- a/themes/custom_2/assets/scss/_job.scss
+++ b/themes/custom_2/assets/scss/_job.scss
@@ -112,8 +112,19 @@
 }
 
 .job img {
-    width: 80px;
-    height: 80px;
+    height: 60px;
     margin: 20px 5px 5px 5px;
     float: right;
+}
+
+.job ul {
+    font-size: 1.0em;
+
+    /*[data-theme=dark] & {
+        color: $dark-color-secondary;
+    }
+    
+    [data-theme=light] & {
+        color: $light-color-secondary;
+    }*/
 }
