--- a/themes/custom_2/layouts/partials/author.html
+++ b/themes/custom_2/layouts/partials/author.html
@@ -1,5 +1,5 @@
-{{- if or .Params.author site.Params.author }}
-{{- $author := (.Params.author | default site.Params.author) }}
+{{- if or .Params.author site.Params.author.name }}
+{{- $author := (.Params.author | default site.Params.author.name) }}
 {{- $author_type := (printf "%T" $author) }}
 {{- if (or (eq $author_type "[]string") (eq $author_type "[]interface {}")) }}
 {{- (delimit $author ", " ) }}
